сохранение перед новой файловой структурой

--- a/index.html
+++ b/index.html
@@ -33,12 +33,46 @@
             Исследователь океана
           </p>
         </div>
-
       </div>
       <button type="button" class="button-plus">
         <div class="button-plus__plus">
         </div>
       </button>
+    </section>
+    <section class="elements">
+      <ul class="elements__list">
+        <li class="elements__list-item">
+          
+        </li>
+
+        <li class="elements__list-item">
+          123
+        </li>
+
+        <li class="elements__list-item">
+          123
+        </li>
+
+        <li class="elements__list-item">
+          123
+        </li>
+
+        <li class="elements__list-item">
+          123
+        </li>
+
+        <li class="elements__list-item">
+          123
+        </li>
+
+
+
+
+      </ul>
+
+
+
+
     </section>
   </main>
 </body>
