--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
   <main>
     <section class="profile">
       <div class="profile__column">
-        <div class="profile__avatar" src="./images/avatar.jpg">
+        <div class="profile__avatar">
         </div>
         <div class="profile__info">
           <div class="profile__row">
             <h1 class="profile__name">
               Жак-Ив Кусто
             </h1>
-            <button class="button-edit" type="button">
-              <div class="button-edit__edit">
-              </div>
+            <button class="button-edit focus" type="button">
+              <!-- <div class="button-edit__edit">
+              </div> -->
             </button>
           </div>
           <p class="profile__description">
@@ -34,47 +34,90 @@
           </p>
         </div>
       </div>
-      <button type="button" class="button-plus">
+      <button type="button" class="button-plus focus">
         <div class="button-plus__plus">
         </div>
       </button>
     </section>
     <section class="elements">
       <ul class="elements__list">
-        <li class="elements__list-item">
-          
+        <li class="element">
+          <img src="./images/image_1.jpg" alt="фото" class="element__photo">
+          <div class="element__row">
+            <h2 class="element__text">
+              <!-- тест overflow -->
+              Карачевск пам тарирам тарирам тарирам
+            </h2>
+            <button type="button" class="button-like focus">
+            </button>
+          </div>
         </li>
-
-        <li class="elements__list-item">
-          123
+        <li class="element">
+          <img src="./images/image_2.jpg" alt="фото" class="element__photo">
+          <div class="element__row">
+            <h2 class="element__text">
+              Гора Эльбрус
+            </h2>
+            <button type="button" class="button-like focus">
+            </button>
+          </div>
         </li>
-
-        <li class="elements__list-item">
-          123
+        <li class="element">
+          <img src="./images/image_3.jpg" alt="фото" class="element__photo">
+          <div class="element__row">
+            <h2 class="element__text">
+              Домбай
+            </h2>
+            <button type="button" class="button-like focus">
+            </button>
+          </div>
         </li>
-
-        <li class="elements__list-item">
-          123
+        <li class="element">
+          <img src="./images/image_2.jpg" alt="фото" class="element__photo">
+          <div class="element__row">
+            <h2 class="element__text">
+              Гора Эльбрус
+            </h2>
+            <button type="button" class="button-like focus">
+            </button>
+          </div>
         </li>
-
-        <li class="elements__list-item">
-          123
+        <li class="element">
+          <img src="./images/image_3.jpg" alt="фото" class="element__photo">
+          <div class="element__row">
+            <h2 class="element__text">
+              Домбай
+            </h2>
+            <button type="button" class="button-like focus">
+            </button>
+          </div>
         </li>
-
-        <li class="elements__list-item">
-          123
+        <li class="element">
+          <img src="./images/image_1.jpg" alt="фото" class="element__photo">
+          <div class="element__row">
+            <h2 class="element__text">
+              Карачаевск
+            </h2>
+            <button type="button" class="button-like focus">
+            </button>
+          </div>
         </li>
-
-
-
-
       </ul>
-
-
-
-
     </section>
   </main>
+  <footer class="footer">
+    <p class="footer__text">
+      © 2020 Mesto Russia
+    </p>
+
+
+
+  </footer>
+
+
+
+
+
 </body>
 
 </html>
