--- a/index.html
+++ b/index.html
@@ -106,6 +106,30 @@
       © 2020 Mesto Russia
     </p>
   </footer>
+  <div class="popup">
+    <form class="popup__form">
+      <fieldset class="popup__edit">
+        <p class="popup__title">
+          Редактировать профиль
+        </p>
+        <label class="popup__field">
+          <input class="popup__input" placeholder="здесь может быть" maxlength="40">
+
+        </label>
+        <label class="popup__field">
+          <input class="popup__input" placeholder="ваша реклама" maxlength="40">
+        </label>
+        <button class="popup__button">
+          Сохранить
+        </button>
+      </fieldset>
+
+
+
+    </form>
+    
+
+  </div>
 
 
 
