изменения ховеров кнопок

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </p>
         </div>
       </div>
-      <button type="button" class="button-plus focus">
+      <button type="button" class="button-plus">
       </button>
     </section>
     <section class="elements">
@@ -44,7 +44,7 @@
               <!-- тест overflow -->
               Карачевск пам тарирам тарирам тарирам
             </h2>
-            <button type="button" class="button-like focus">
+            <button type="button" class="button-like">
             </button>
           </div>
         </li>
@@ -54,7 +54,7 @@
             <h2 class="element__text">
               Гора Эльбрус
             </h2>
-            <button type="button" class="button-like focus">
+            <button type="button" class="button-like">
             </button>
           </div>
         </li>
@@ -64,7 +64,7 @@
             <h2 class="element__text">
               Домбай
             </h2>
-            <button type="button" class="button-like focus">
+            <button type="button" class="button-like">
             </button>
           </div>
         </li>
@@ -74,7 +74,7 @@
             <h2 class="element__text">
               Гора Эльбрус
             </h2>
-            <button type="button" class="button-like focus">
+            <button type="button" class="button-like">
             </button>
           </div>
         </li>
@@ -84,7 +84,7 @@
             <h2 class="element__text">
               Домбай
             </h2>
-            <button type="button" class="button-like focus">
+            <button type="button" class="button-like">
             </button>
           </div>
         </li>
@@ -94,7 +94,7 @@
             <h2 class="element__text">
               Карачаевск
             </h2>
-            <button type="button" class="button-like focus">
+            <button type="button" class="button-like">
             </button>
           </div>
         </li>
@@ -107,7 +107,7 @@
     </p>
   </footer>
   <!-- для отключение popup удалите popup_opened -->
-  <div class="popup popup_opened">
+  <div class="popup">
     <form class="popup__form">
       <fieldset class="popup__edit">
         <p class="popup__title">
@@ -119,15 +119,13 @@
         <label class="popup__field">
           <input class="popup__input" placeholder="ваша реклама" maxlength="40">
         </label>
-        <button class="popup__button focus">
+        <button class="popup__button">
           Сохранить
         </button>
       </fieldset>
-      <button class="popup__button-close focus">
+      <button class="popup__button-close">
       </button>
     </form>
-  </div>
-  </form>
   </div>
 </body>
 
