--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <!-- тест overflow -->
               Карачевск пам тарирам тарирам тарирам
             </h2>
-            <button type="button" class="button-like">
+            <button type="button" class="element__button-like">
             </button>
           </div>
         </li>
@@ -54,7 +54,7 @@
             <h2 class="element__text">
               Гора Эльбрус
             </h2>
-            <button type="button" class="button-like">
+            <button type="button" class="element__button-like">
             </button>
           </div>
         </li>
@@ -64,7 +64,7 @@
             <h2 class="element__text">
               Домбай
             </h2>
-            <button type="button" class="button-like">
+            <button type="button" class="element__button-like">
             </button>
           </div>
         </li>
@@ -74,7 +74,7 @@
             <h2 class="element__text">
               Гора Эльбрус
             </h2>
-            <button type="button" class="button-like">
+            <button type="button" class="element__button-like">
             </button>
           </div>
         </li>
@@ -84,7 +84,7 @@
             <h2 class="element__text">
               Домбай
             </h2>
-            <button type="button" class="button-like">
+            <button type="button" class="element__button-like">
             </button>
           </div>
         </li>
@@ -94,7 +94,7 @@
             <h2 class="element__text">
               Карачаевск
             </h2>
-            <button type="button" class="button-like">
+            <button type="button" class="element__button-like">
             </button>
           </div>
         </li>
@@ -103,12 +103,12 @@
   </main>
   <footer class="footer">
     <p class="footer__text">
-      © 2020 Mesto Russia
+      &copy; 2020 Mesto Russia
     </p>
   </footer>
   <!-- для отключение popup удалите popup_opened -->
   <div class="popup">
-    <form class="popup__form">
+    <form name="edit__profile" class="popup__form">
       <fieldset class="popup__edit">
         <h3 class="popup__title">
           Редактировать профиль
