--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </p>
   </footer>
   <!-- для отключение popup удалите popup_opened -->
-  <div class="popup popup_opened">
+  <div class="popup">
     <!-- задать класс когда форм будет много -->
     <div>
       <!-- перенести заголовок из формы -->
@@ -125,11 +125,11 @@
           <label class="popup__field">
             <input class="popup__input" placeholder="О себе" maxlength="40">
           </label>
-          <button type="button" class="popup__button">
+          <button type="submit" class="popup__button">
             Сохранить
           </button>
         </fieldset>
-        <button type="submit" class="popup__button-close">
+        <button type="button" class="popup__button-close">
         </button>
       </form>
     </div>
