--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
       </figure>
     </div>
   </div>
-  <script src="./scripts/initial-сards.js"></script>
+
+
+  <script src="./scripts/components/initial-сards.js"></script>
   <script src="./scripts/script.js"></script>
 </body>
 
