--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Igor Shokin">
   <title>Место</title>
-  <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body class="page">
   <header class="header">
-    <img src="./images/logo.svg" alt="логотип" class="logo">
+    <img src="<%=require('./images/logo.svg')%>" alt="логотип" class="logo">
   </header>
   <main>
     <section class="profile">
@@ -139,8 +138,6 @@
   </div>
 
 
-  <script src="./scripts/components/initial-сards.js"></script>
-  <script src="./scripts/script.js"></script>
 </body>
 
 </html>
