--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
       <h3 class="popup__title">
         Редактировать профиль
       </h3>
-      <form name="edit__profile" class="popup__form">
+      <form name="edit__profile" class="popup__form" novalidate>
         <fieldset class="popup__edit">
           <label class="popup__field">
             <input
@@ -98,7 +98,7 @@
       <h3 class="popup__title">
         Новое место
       </h3>
-      <form name="edit__profile" class="popup__form">
+      <form name="edit__profile" class="popup__form" novalidate>
         <fieldset class="popup__edit">
           <label class="popup__field">
             <input
