--- a/src/index.html
+++ b/src/index.html
@@ -70,11 +70,11 @@
             id="name"
             class="popup__input popup__input_name"
             placeholder="Имя"
-            type="text"
+            type="name"
             minlength="2"
             maxlength="40"
             required>
-            <span id="error-text" class="popup__error"></span>
+            <span id="error-name" class="popup__error"></span>
           </label>
           <label class="popup__field">
             <input
