--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
         <template class="card">
           <li class="element">
             <img src="#" alt="фото" class="element__photo" title="увеличить">
-            <button type="button" class="element__button-delete">
+            <button disabled type="button" class="element__button-delete">
             </button>
             <div class="element__row">
               <h2 class="element__text">
@@ -87,7 +87,7 @@
             required>
             <span id="error-text" class="popup__error"></span>
           </label>
-          <button type="submit" class="popup__button">
+          <button disabled type="submit" class="popup__button">
             Сохранить
           </button>
         </fieldset>
@@ -124,7 +124,7 @@
             required>
             <span id="error-url" class="popup__error"></span>
           </label>
-          <button type="submit" class="popup__button">
+          <button disabled type="submit" class="popup__button">
             Создать
           </button>
         </fieldset>
