fix delete cards CSS

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
         <template class="card">
           <li class="element">
             <img src="#" alt="фото" class="element__photo" title="увеличить">
-            <button disabled type="button" class="element__button-delete">
+            <button type="button" class="element__button-delete">
             </button>
             <div class="element__row">
               <h2 class="element__text">
