--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
         <!-- java script -->
         <template class="card">
           <li class="element">
-            <img src="#" alt="фото" class="element__photo" title="увеличить">
+            <img src="#" class="element__photo" title="увеличить">
             <button type="button" class="element__button-delete">
             </button>
             <div class="element__row">
@@ -139,7 +139,7 @@
       <button type="button" class="popup__button-close">
       </button>
       <figure class="popup-full-screen__figure">
-        <img src="#" class="popup-full-screen__photo" alt="что-то красивое">
+        <img src="#" class="popup-full-screen__photo">
         <figcaption class="popup-full-screen__description"></figcaption>
       </figure>
     </div>
