--- a/src/index.html
+++ b/src/index.html
@@ -124,7 +124,7 @@
             required>
             <span id="error-url" class="popup__error"></span>
           </label>
-          <button type="submit" class="popup__button">
+          <button type="submit" class="popup__button popup__add-button">
             Создать
           </button>
         </fieldset>
